Added missing variable assignment 'p'

--- a/doc/notebooks/Scapy in 15 minutes.ipynb
+++ b/doc/notebooks/Scapy in 15 minutes.ipynb
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "sr1(IP(dst=\"8.8.8.8\")/UDP()/DNS(qd=DNSQR()))\n",
+    "p = sr1(IP(dst=\"8.8.8.8\")/UDP()/DNS(qd=DNSQR()))\n",
     "p[DNS].an"
    ]
   },
